[gd_scene load_steps=7 format=2]

[ext_resource path="res://raw_assets/fonts/SafetyThirdRegular-vmm77.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/controls_popup/controls_popup.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/settings_popup/settings_popup.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/pause_popup/pause_popup.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="PausePopup" type="Popup"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.647059 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 50.0
margin_right = -200.0
margin_bottom = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 624.0
margin_bottom = 450.0
size_flags_vertical = 3
custom_constants/separation = 100
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 624.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 242.0
margin_top = 185.0
margin_right = 381.0
margin_bottom = 433.0
size_flags_horizontal = 4
custom_constants/separation = 12
alignment = 1

[node name="BtnResume" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 139.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="BtnRestart" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 139.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="BtnSettings" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 139.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="BtnControls" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 139.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 2 )
text = "Controls"

[node name="BtnQuit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 139.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="SettingsPopup" parent="." instance=ExtResource( 3 )]

[node name="ControlsPopup" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/BtnResume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/BtnRestart" to="." method="_on_btn_retry_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/BtnSettings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/BtnControls" to="." method="_on_btn_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
